Fix image position small down to use scss

--- a/src/components/ImageText/ImageText.scss
+++ b/src/components/ImageText/ImageText.scss
@@ -24,6 +24,10 @@
     .ImageText__image {
       min-width: spacing(65);
 
+      @media ($small-down) {
+        transform: translate(0, 0) !important;
+      }
+
       @media ($medium-up) {
         order: 1;
         align-self: flex-end;
